--- a/server_extensions_extra/build.gradle
+++ b/server_extensions_extra/build.gradle
@@ -92,6 +92,7 @@ dependencies {
     implementation("com.github.generalbytescom.trident:utils:fff6ed0")
     implementation("com.google.protobuf:protobuf-java:3.13.0")
     implementation("com.onfido:onfido-api-java:2.3.1")
+    implementation(group: 'com.rabbitmq', name: 'amqp-client', version: '5.18.0')
 
     testImplementation("junit:junit:4.13.1")
     testImplementation("org.assertj:assertj-core:3.19.0")
